Version 2.7.16dev:

* Removed dependency on GLEW, use GLAD OpenGL loader instead.
* Check if SDL2 uses the X11 subsystem before using X11 directly.
* Fixed crash when using the Wayland SDL2 driver.

Version 2.7.15dev:

* New option clipboard_sharing.
* Translation fix for Fedora.
* Do do install unused files to $prefix/share/fs-uae.
* Packaging fix for Linux standalone version (fixes crash on Ubuntu 16.04).
* Use embedded RUNPATHs instead of LD_LIBRARY_PATH for generic Linux versions.
* Imported updated translations from crowdin.com.

Version 2.7.14dev:

* Fixed reserved word problem ("filter") in crt.shader.
* Fixes for earlier vpar merge (fs-uae/issues/93).
* Added segtracker to UAE debugger [cnvogelg].
* Imported updated translations from crowdin.com.

Version 2.7.13dev:

* JIT on x86-64: Handle it gracefully when 2 GB virtual memory could not
  be allocated (reduce size of allocation region).
* A bit more flexible VM allocation function.
* New option expect_version (used by FS-UAE Launcher).
* Fixed middle mouse button ungrabbing with more than 1 keyboard joystick.
* Remove greek translations due to missing bitmap font characters.
* Imported updated translations from crowdin.com.

Version 2.7.12dev:

* Support additional/custom keybard-emulated joysticks, built-in configs
  for X-Arcade controllers.
* Enabled ECS Agnus for *all* A500 models by mistake (2.7.10dev).

Version 2.7.10dev:

* Choosing an accelerator now auto-selects a suitable CPU.
* Added new option: network_card.
* Added new option: freezer_cartridge.
* Automatically set chipset to ECS Agnus if A500 and chip RAM >= 1MB.
* A4000 model defaults to 680EC30 now, not 68030.
* Fixed on-screen warning when using hardware dongle.
* You can now more easily override keybindings in keyboard.conf.
* New option cdrom_drive_0_delay (boolean) - delayed insert for CD32.
* Enable the CD-ROM drive if there are CD images in the CD swap list.
* Load floppy drive sounds from fs-uae.dat (fixes missing drive sounds).